// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LicensePluginCore — compound license strings failOn with compound licenses fails AND expression when exact compound string matches fail list 1`] = `
[
  "LicensePlugin: License "MIT AND Apache-2.0" for package "pkg@1.0.0" is in the fail list",
]
`;

exports[`LicensePluginCore — compound license strings failOn with compound licenses fails OR expression when exact compound string matches fail list 1`] = `
[
  "LicensePlugin: License "(MIT OR Apache-2.0)" for package "pkg@1.0.0" is in the fail list",
]
`;

exports[`LicensePluginCore — compound license strings failOn with compound licenses passes AND expression when compound string does not match fail list 1`] = `
[
  {
    "license": {
      "license": "MIT AND Apache-2.0",
      "licenseText": undefined,
    },
    "package": {
      "author": undefined,
      "chunks": [
        "main",
      ],
      "homepage": undefined,
      "modules": [],
      "name": "pkg",
      "packageJsonPath": "/node_modules/pkg/package.json",
      "path": "/node_modules/pkg",
      "repository": undefined,
      "version": "1.0.0",
    },
  },
]
`;

exports[`LicensePluginCore — compound license strings failOn with compound licenses passes OR expression when compound string does not match fail list 1`] = `
[
  {
    "license": {
      "license": "(MIT OR CC0-1.0)",
      "licenseText": undefined,
    },
    "package": {
      "author": undefined,
      "chunks": [
        "main",
      ],
      "homepage": undefined,
      "modules": [],
      "name": "pkg",
      "packageJsonPath": "/node_modules/pkg/package.json",
      "path": "/node_modules/pkg",
      "repository": undefined,
      "version": "1.0.0",
    },
  },
]
`;

exports[`LicensePluginCore — compound license strings multi-version licenses enforces failOn per-version correctly 1`] = `
[
  "LicensePlugin: License "GPL-3.0" for package "packageA@2.0.0" is in the fail list",
]
`;

exports[`LicensePluginCore — compound license strings multi-version licenses enforces onlyAllow per-version correctly 1`] = `
[
  "LicensePlugin: License "GPL-3.0" for package "packageA@2.0.0" is not in the allowed list: MIT",
]
`;

exports[`LicensePluginCore — compound license strings multi-version licenses returns UNKNOWN for one version when not in cache 1`] = `
[
  {
    "license": {
      "license": "MIT",
      "licenseText": undefined,
    },
    "package": {
      "author": undefined,
      "chunks": [
        "main",
      ],
      "homepage": undefined,
      "modules": [],
      "name": "packageA",
      "packageJsonPath": "/node_modules/packageA/package.json",
      "path": "/node_modules/packageA",
      "repository": undefined,
      "version": "1.0.0",
    },
  },
  {
    "license": {
      "license": "UNKNOWN",
      "licenseText": undefined,
    },
    "package": {
      "author": undefined,
      "chunks": [
        "main",
      ],
      "homepage": undefined,
      "modules": [],
      "name": "packageA",
      "packageJsonPath": "/node_modules/packageA/package.json",
      "path": "/node_modules/packageA",
      "repository": undefined,
      "version": "2.0.0",
    },
  },
]
`;

exports[`LicensePluginCore — compound license strings multi-version licenses returns correct license for each version of the same package 1`] = `
[
  {
    "license": {
      "license": "MIT",
      "licenseText": undefined,
    },
    "package": {
      "author": undefined,
      "chunks": [
        "main",
      ],
      "homepage": undefined,
      "modules": [],
      "name": "packageA",
      "packageJsonPath": "/node_modules/packageA/package.json",
      "path": "/node_modules/packageA",
      "repository": undefined,
      "version": "1.0.0",
    },
  },
  {
    "license": {
      "license": "GPL-3.0",
      "licenseText": undefined,
    },
    "package": {
      "author": undefined,
      "chunks": [
        "main",
      ],
      "homepage": undefined,
      "modules": [],
      "name": "packageA",
      "packageJsonPath": "/node_modules/packageA/package.json",
      "path": "/node_modules/packageA",
      "repository": undefined,
      "version": "2.0.0",
    },
  },
]
`;

exports[`LicensePluginCore — compound license strings onlyAllow with compound licenses allows AND expression when exact compound string is in allow list 1`] = `
[
  {
    "license": {
      "license": "MIT AND Apache-2.0",
      "licenseText": undefined,
    },
    "package": {
      "author": undefined,
      "chunks": [
        "main",
      ],
      "homepage": undefined,
      "modules": [],
      "name": "pkg",
      "packageJsonPath": "/node_modules/pkg/package.json",
      "path": "/node_modules/pkg",
      "repository": undefined,
      "version": "1.0.0",
    },
  },
]
`;

exports[`LicensePluginCore — compound license strings onlyAllow with compound licenses fails AND expression when exact compound string not in allow list 1`] = `
[
  "LicensePlugin: License "MIT AND Apache-2.0" for package "pkg@1.0.0" is not in the allowed list: MIT",
]
`;

exports[`LicensePluginCore — compound license strings onlyAllow with compound licenses fails OR expression when exact compound string not in allow list 1`] = `
[
  "LicensePlugin: License "(MIT OR Apache-2.0)" for package "pkg@1.0.0" is not in the allowed list: MIT",
]
`;

exports[`LicensePluginCore — compound license strings onlyAllow with compound licenses fails OR expression when individual licenses are in allow list (exact match required) 1`] = `
[
  "LicensePlugin: License "(MIT OR Apache-2.0)" for package "pkg@1.0.0" is not in the allowed list: MIT, Apache-2.0",
]
`;

exports[`LicensePluginCore — compound license strings preserves AND expression from array licenses 1`] = `
[
  {
    "license": {
      "license": "MIT AND Apache-2.0",
      "licenseText": undefined,
    },
    "package": {
      "author": undefined,
      "chunks": [
        "main",
      ],
      "homepage": undefined,
      "modules": [],
      "name": "dual",
      "packageJsonPath": "/node_modules/dual/package.json",
      "path": "/node_modules/dual",
      "repository": undefined,
      "version": "1.0.0",
    },
  },
]
`;

exports[`LicensePluginCore — compound license strings preserves OR expression in license field 1`] = `
[
  {
    "license": {
      "license": "(MIT OR CC0-1.0)",
      "licenseText": undefined,
    },
    "package": {
      "author": undefined,
      "chunks": [
        "main",
      ],
      "homepage": undefined,
      "modules": [],
      "name": "type-fest",
      "packageJsonPath": "/node_modules/type-fest/package.json",
      "path": "/node_modules/type-fest",
      "repository": undefined,
      "version": "0.21.3",
    },
  },
]
`;
